# MedTransfer-AI

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  seed.py
backend/app/ai/: agent_tools.py  orchestrator.py  sbar_generator.py  sbar_verifier.py
backend/app/ai/agents/: __init__.py  base_agent.py  compliance_agent.py  event_bus.py  facility_agent.py  orchestrator_agent.py  outreach_agent.py
backend/app/api/v1/: agent.py  analytics.py  calls.py  compliance.py  facilities.py  patients.py  router.py  transfers.py
backend/app/models/: __init__.py  call_log.py  clinical_summary.py  compliance.py  facility.py  organization.py  patient.py  transfer.py  transport.py  user.py
backend/app/schemas/: agent.py  call_log.py  common.py  facility.py  patient.py  transfer.py
backend/app/services/: call_service.py  compliance_service.py  facility_service.py  transfer_service.py
docs/: 01-PRD.md  02-system-architecture.md  03-data-models.md  04-api-specification.md  05-ai-agent-design.md  06-compliance-security.md  07-tech-stack.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentChat.tsx  CallPanel.tsx  Layout.tsx  LiveCallSession.tsx  WarRoomCallView.tsx
frontend/src/components/ui/: hero-landing-page.tsx
frontend/src/hooks/: usePhoneSounds.ts
frontend/src/pages/: Dashboard.tsx  Facilities.tsx  NewTransfer.tsx  Patients.tsx  TransferDetail.tsx
frontend/src/services/: api.ts
